		#105 by Chris Jacobsen)
	* Dependencies: Upgraded CEGUI from 0.7.9 to 0.8.7 (ticket #10 by
		Marvin Gülker)
    * Dependencies: CEGUI has ben dropped from Debian 10. It can be
		compiled manually, but not against the libxml2 contained in
		Debian 10's repositories. Instead, it can be compiled against
		libexpat. To allow the use of a CEGUI compiled against
		libexpat instead of libxml2, TSC now has a new compilation
		option CEGUI_USE_EXPAT.
	* Dependencies: Upgraded mruby from 1.0.0 to 1.4.1
	* Dependencies: New dependency on the `tinyclipboard' library
	* Dependencies: Dropped dependency on Ruby for building TSC itself
		(now only required for mruby)
	* Misc: C++11 compilation support
	* Misc: Renamed "1-UP berry" to "Life berry" (#365 by Chris Jacobsen)
	* Misc: Added Travis CI config (PR #453 by Lauri Ojansivu)
	* Misc: "God Mode" renamed to "Omega Mode" (#481 by Marvin Gülker)
	* Misc: New world graphics category "Mountain"
	* Misc: New compilation option USE_SYSTEM_TINYCLIPBOARD.
	* Misc: Removed package support (#656 by Marvin Gülker)
	* Misc: Add TSC scripting generator programme (scrdg). Scripting
		API docs are now generated during the normal build process.
	* Misc: New compilation option ENABLE_SCRIPT_DOCS.
	* Misc: Removed compilation option ENABLE_MRUBY. Scripting is an
		integral part of TSC that can't be disabled anymore.

2015-08-17  Marvin Gülker  <quintus@quintilianus.eu>

	* Version 2.0.0 released.
	* Changes: Too many to count. We promise to keep a better change
		log next time.

Copyright © 2015 The TSC Contributors
This file is part of TSC.

This program is free software; you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation; either version 3 of the License, or
(at your option) any later version.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <http://www.gnu.org/licenses/>.